# music_qa

./: .gitignore  README.rst  main.py  pyproject.toml
doc/report/: main.tex
music_qa/: .#question_clf.py  __init__.py  all_questions.txt  answer.py  classifier.py  dictionary.py  extract.py  extract_features.py  extractor.py  fire_query.py  get_wikidata.py  main.py  qa.py  queries.py  question.py  question_clf.py  sparql_query.py  thesaurus.py  util.py  wikidata_mapper.py  wikidata_query.py
music_qa/Assignment 4/: S3193063_4.py
music_qa/mappings/: __init__.py  x_of_y_maps.py
music_qa/old/: queries.py
music_qa/questions/: __init__.py  boolean_questions.py  count_questions.py  descriptive_questions.py  highest_question.py  x_of_y_questions.py
scripts/: classification_exploration.py
tests/: test_music_qa.py
