[tool.poetry]
name = "music_qa"
version = "0.1.0"
description = ""
authors = ["prime <jordis1995@live.nl>"]

[tool.poetry.dependencies]
python = "^3.5"
spacy = "^2.1"
nltk = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[tool.poetry.scripts]
main = "main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
